# AbSynth

./: .gitignore  AbSynth.ipynb  LICENSE  MANIFEST.in  README.md  environment.yml  plot_embeddings_demo.ipynb  requirements.txt  scan_demo.ipynb  setup.cfg
absynth/: __init__.py
absynth/cli/: evaluate.py  generate.py  infill.py  redesign.py
absynth/model/: __init__.py  absynth_a.py  absynth_m.py  utils.py
absynth/trained_models/absynth-a/: config.json
absynth/trained_models/absynth-m/: config.json
absynth/utils/: seed.py
analysis/: __init__.py  plot_embeddings.py  plot_scan.py  scan_evaluate.py
