[metadata]
name = absynth
version = 0.1.0
description = A Humanized Generative Framework for Antibody Sequence Design
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE

[options]
packages = find:
python_requires = >=3.9
install_requires =
    torch>=2.3.0
    transformers>=4.27.0
    huggingface-hub>=0.36.0
    numpy>=1.24.0
    pandas
    tqdm
    h5py
    matplotlib
    seaborn
    scikit-learn
include_package_data = True

[options.packages.find]
include =
    absynth*
    analysis*

[options.entry_points]
console_scripts =
    absynth-generate = absynth.cli.generate:main
    absynth-infill = absynth.cli.infill:main
    absynth-redesign = absynth.cli.redesign:main
    absynth-evaluate = absynth.cli.evaluate:main
    absynth-scan = analysis.scan_evaluate:main
    absynth-plot-scan = analysis.plot_scan:main
